<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7FFF53B"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/frase_cabecalho"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25dp" />

    <LinearLayout
        android:id="@+id/activity_main_linear_layout_info_gasolina"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/activity_main_img_gasolina"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/gasolina" />

        <EditText
            android:id="@+id/activity_main_edit_valor_gasolina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/editText_valor_gasolina_hint"
            android:focusable="true"
            android:clickable="true"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_linear_layout_info_etanol"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/activity_main_img_etanol"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/etanol" />

        <EditText
            android:id="@+id/activity_main_edit_valor_etanol"
            android:layout_width="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/editText_valor_etanol_hint"
            android:inputType="numberDecimal" />


    </LinearLayout>


    <Button
        android:id="@+id/main_activity_botao_comparar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFC107"
        android:padding="20dp"
        android:text="@string/texto_botao_comparar"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/textView_resultado"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/activity_main_img_resultado"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="8dp" />


</LinearLayout>